log
Fri 29 Mar 2024 07:15:22 PM UTC: 
 tests:  0|6
total_score: 0/70
7109416
Fri 29 Mar 2024 07:20:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8a513ba
Fri 29 Mar 2024 07:20:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f40934f
Fri 29 Mar 2024 08:11:13 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:26: error: expected ‘;’ before ‘}’ token
   49 |   return list->head->data
      |                          ^
      |                          ;
   50 | }
      | ~                         
Compilation failed
d5d4400
